Changelog
=========

Version 2.02
	Fixed bug: changing encoding in settings is not saved properly
	Fixed bug: no branches found in remotes dialog
	Fixed bug: application shows exception and fails to close when application settings file is corrupt
	Fixed bug: "No commits" screen in revision grid not shown
	Fixed bug: "download gource" not working in gource plugin
	Fixed bug: encoding not handled correctly in commit message and filenames
	Fixed bug: blame doesn't refresh properly
	Added "Copy filename to clipboard" to context menu's in browse dialog
	Last commit message is stored in settings so it can be used in multiple repositories

Version 2.01
	Fixed issue 144: encoding in 'Diff' view ignores settings
	Fixed issue 143: hitting refresh in browse dialog causes application to freeze
	Fixed bug where multiple value entries in a config file section were being stripped from config file
	
Version 2.00
	Fixed bug: refreshing and loading gravatars caused GitExtensions to crash
	Fixed bug: settings check not shown properly when a problem was found

Version 1.99
	Fixed issue 81: when staging a file, all partially staged files are removed from unstaged list
	Fixed issue 107: alt+f4 not working when revisiongrid has focus
	Fixed issue 111: Annotated Tags Appear Twice in Push Dialog
	Fixed issue 113: Statistics: "Lines of Code per type" and "Lines of testcode" fail in empty or non code repo
	Fixed issue 114: Adding filter which results in no commits shows "empty repository" UI
	Fixed issue 119: show files in FileHistory also prior to rename
	Fixed issue 120: choose branch when adding new submodule doesn't work	
	Fixed issue 121: Local branch and remote tracking branch reverse order on selection
	Fixed issue 122: Visual Studio 2010 solution file
	Fixed issue 123: Translation String is missing in Delete branch conformation dialog
	Fixed issue 126: Added editor for .gitattributes
	Fixed issue 129: loading submodules submenu is very slow