@@ -31,11 +31,16 @@
             this.components = new System.ComponentModel.Container();
             this.tableLayout = new System.Windows.Forms.TableLayoutPanel();
             this.gravatar1 = new GitUI.GravatarControl();
+            this.splitContainer1 = new System.Windows.Forms.SplitContainer();
+            this._RevisionHeader = new System.Windows.Forms.RichTextBox();
             this.RevisionInfo = new System.Windows.Forms.RichTextBox();
             this.commitInfoContextMenuStrip = new System.Windows.Forms.ContextMenuStrip(this.components);
             this.showContainedInBranchesToolStripMenuItem = new System.Windows.Forms.ToolStripMenuItem();
             this.showContainedInTagsToolStripMenuItem = new System.Windows.Forms.ToolStripMenuItem();
             this.tableLayout.SuspendLayout();
+            this.splitContainer1.Panel1.SuspendLayout();
+            this.splitContainer1.Panel2.SuspendLayout();
+            this.splitContainer1.SuspendLayout();
             this.commitInfoContextMenuStrip.SuspendLayout();
             this.SuspendLayout();
             // 
@@ -46,7 +51,7 @@
             this.tableLayout.ColumnStyles.Add(new System.Windows.Forms.ColumnStyle());
             this.tableLayout.ColumnStyles.Add(new System.Windows.Forms.ColumnStyle(System.Windows.Forms.SizeType.Percent, 100F));
             this.tableLayout.Controls.Add(this.gravatar1, 0, 0);
-            this.tableLayout.Controls.Add(this.RevisionInfo, 1, 0);
+            this.tableLayout.Controls.Add(this.splitContainer1, 1, 0);
             this.tableLayout.Dock = System.Windows.Forms.DockStyle.Fill;
             this.tableLayout.Location = new System.Drawing.Point(0, 0);
             this.tableLayout.Margin = new System.Windows.Forms.Padding(0);
@@ -68,17 +73,50 @@
             this.gravatar1.Size = new System.Drawing.Size(105, 411);
             this.gravatar1.TabIndex = 1;
             // 
+            // splitContainer1
+            // 
+            this.splitContainer1.Dock = System.Windows.Forms.DockStyle.Fill;
+            this.splitContainer1.FixedPanel = System.Windows.Forms.FixedPanel.Panel1;
+            this.splitContainer1.IsSplitterFixed = true;
+            this.splitContainer1.Location = new System.Drawing.Point(108, 3);
+            this.splitContainer1.Name = "splitContainer1";
+            this.splitContainer1.Orientation = System.Windows.Forms.Orientation.Horizontal;
+            // 
+            // splitContainer1.Panel1
+            // 
+            this.splitContainer1.Panel1.Controls.Add(this._RevisionHeader);
+            // 
+            // splitContainer1.Panel2
+            // 
+            this.splitContainer1.Panel2.Controls.Add(this.RevisionInfo);
+            this.splitContainer1.Size = new System.Drawing.Size(783, 405);
+            this.splitContainer1.SplitterDistance = 115;
+            this.splitContainer1.SplitterWidth = 1;
+            this.splitContainer1.TabIndex = 2;
+            // 
+            // _RevisionHeader
+            // 
+            this._RevisionHeader.BackColor = System.Drawing.SystemColors.ControlLight;
+            this._RevisionHeader.BorderStyle = System.Windows.Forms.BorderStyle.None;
+            this._RevisionHeader.Dock = System.Windows.Forms.DockStyle.Fill;
+            this._RevisionHeader.Font = new System.Drawing.Font("Tahoma", 9.75F);
+            this._RevisionHeader.Location = new System.Drawing.Point(0, 0);
+            this._RevisionHeader.Name = "_RevisionHeader";
+            this._RevisionHeader.Size = new System.Drawing.Size(783, 115);
+            this._RevisionHeader.TabIndex = 0;
+            this._RevisionHeader.Text = "";
+            // 
             // RevisionInfo
             // 
             this.RevisionInfo.BackColor = System.Drawing.SystemColors.Window;
             this.RevisionInfo.BorderStyle = System.Windows.Forms.BorderStyle.None;
             this.RevisionInfo.ContextMenuStrip = this.commitInfoContextMenuStrip;
             this.RevisionInfo.Dock = System.Windows.Forms.DockStyle.Fill;
-            this.RevisionInfo.Location = new System.Drawing.Point(111, 6);
+            this.RevisionInfo.Location = new System.Drawing.Point(0, 0);
             this.RevisionInfo.Margin = new System.Windows.Forms.Padding(6);
             this.RevisionInfo.Name = "RevisionInfo";
             this.RevisionInfo.ReadOnly = true;
-            this.RevisionInfo.Size = new System.Drawing.Size(777, 399);
+            this.RevisionInfo.Size = new System.Drawing.Size(783, 289);
             this.RevisionInfo.TabIndex = 0;
             this.RevisionInfo.Text = "";
             // 
@@ -88,7 +126,7 @@
             this.showContainedInBranchesToolStripMenuItem,
             this.showContainedInTagsToolStripMenuItem});
             this.commitInfoContextMenuStrip.Name = "commitInfoContextMenuStrip";
-            this.commitInfoContextMenuStrip.Size = new System.Drawing.Size(251, 70);
+            this.commitInfoContextMenuStrip.Size = new System.Drawing.Size(251, 48);
             // 
             // showContainedInBranchesToolStripMenuItem
             // 
@@ -113,6 +151,9 @@
             this.Name = "CommitInfo";
             this.Size = new System.Drawing.Size(894, 411);
             this.tableLayout.ResumeLayout(false);
+            this.splitContainer1.Panel1.ResumeLayout(false);
+            this.splitContainer1.Panel2.ResumeLayout(false);
+            this.splitContainer1.ResumeLayout(false);
             this.commitInfoContextMenuStrip.ResumeLayout(false);
             this.ResumeLayout(false);
 
@@ -126,5 +167,7 @@
         private System.Windows.Forms.ContextMenuStrip commitInfoContextMenuStrip;
         private System.Windows.Forms.ToolStripMenuItem showContainedInBranchesToolStripMenuItem;
         private System.Windows.Forms.ToolStripMenuItem showContainedInTagsToolStripMenuItem;
+        private System.Windows.Forms.SplitContainer splitContainer1;
+        private System.Windows.Forms.RichTextBox _RevisionHeader;
     }
 }
